# kubernetes

./: go.mod  go.sum
pkg/auth/authorizer/wasm/: auth.go  auth_test.go  wasm.go  wazero.go
pkg/kubeapiserver/authenticator/: config.go
pkg/kubeapiserver/authorizer/: config.go
pkg/kubeapiserver/authorizer/modes/: modes.go
pkg/kubeapiserver/options/: authentication.go  authorization.go  plugins.go
pkg/wasm/: authn_test.go  config.go  config_test.go  kubewarden.go  kubewarden_test.go  runner.go  runner_test.go  wapc.go  wapc_test.go  wasi.go  wasi_test.go
pkg/wasm/admission/: admission.go  admission_test.go  config.go  controller.go  controller_chain.go  controller_test.go  patch_test.go  util.go  wasi.go
pkg/wasm/authenticator/: authn.go  authn_test.go  wasi.go
pkg/wasm/authorizer/: authz.go  authz_test.go  config.go  wasi.go
pkg/wasm/internal/wasi/: executor.go  executor_test.go  kubewarden.go  kubewarden_test.go  runner.go  runner_test.go  wapc.go  wapc_test.go  wasi.go  wasi_test.go  wrapper.go
pkg/wasm/testdata/: Cargo.toml
pkg/wasm/testmodules/: .gitignore  Cargo.toml  Makefile  prepare_integration_tests.sh
pkg/wasm/testmodules/test-admission/: Cargo.toml
pkg/wasm/testmodules/test-admission-mut/: Cargo.toml
pkg/wasm/testmodules/test-admission-mut-helper/: Cargo.toml
pkg/wasm/testmodules/test-admission-mut-helper/src/: lib.rs
pkg/wasm/testmodules/test-authz/: Cargo.toml
pkg/wasm/testmodules/test-kubewarden-mut/: Cargo.toml
pkg/wasm/testmodules/test-wapc/: Cargo.toml
plugin/pkg/admission/magic/: admission.go
(+68 files in other folders)
