[package]
name = "test-admission"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
#kube = { version = "0.74.0", features = ["admission"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
